tests/baselines/reference/callOnInstance.errors.txt
callOnInstance.ts(7,18): error TS2349: This expression is not callable.
  Type 'D' has no call signatures.
callOnInstance.ts(10,1): error TS2349: This expression is not callable.
  Type 'C' has no call signatures.


==== callOnInstance.ts (2 errors) ====
    declare function D(): string; // error
    
    declare class D { constructor (value: number); } // error
    
    var s1: string = D(); // OK
    
    var s2: string = (new D(1))();
                     ~~~~~~~~~~
!!! error TS2349: This expression is not callable.
!!! error TS2349:   Type 'D' has no call signatures.
    
    declare class C { constructor(value: number); }
    (new C(1))(); // Error for calling an instance
    ~~~~~~~~~~
!!! error TS2349: This expression is not callable.
!!! error TS2349:   Type 'C' has no call signatures.